--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet" />
+  <!-- Font Awesome for app/social icons -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
 
   <script>
-    // IntersectionObserver for scroll-in animations + smooth scrolling for nav links
+    // Scroll animations + smooth scrolling
     document.addEventListener("DOMContentLoaded", () => {
-      // Scroll-in animations
+      // IntersectionObserver for .animate
       const observer = new IntersectionObserver((entries) => {
         entries.forEach(entry => {
           if (entry.isIntersecting) {
@@ -23,7 +31,7 @@
 
       document.querySelectorAll(".animate").forEach(el => observer.observe(el));
 
-      // Smooth scrolling for internal links
+      // Smooth scroll for internal links
       document.querySelectorAll('a[href^="#"]').forEach(link => {
         link.addEventListener("click", (e) => {
           const href = link.getAttribute("href");
@@ -31,10 +39,7 @@
           const target = document.getElementById(targetId);
           if (target) {
             e.preventDefault();
-            target.scrollIntoView({
-              behavior: "smooth",
-              block: "start"
-            });
+            target.scrollIntoView({ behavior: "smooth", block: "start" });
           }
         });
       });
@@ -53,6 +58,7 @@
         <li><a href="#menu">Menu</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#visit">Visit</a></li>
+        <!-- Contact now scrolls to the footer -->
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
@@ -148,7 +154,7 @@
       </div>
     </section>
 
-    <!-- VISIT SECTION -->
+    <!-- VISIT SECTION (KEEP HOURS + LOCATION + MAP) -->
     <section id="visit" class="section animate">
       <h2>Hours & Harbor</h2>
       <div class="section-inner two-column">
@@ -176,7 +182,6 @@
 
         <div class="map-wrapper slide-up delay-1">
           <div class="map-embed">
-            <!-- Bigger Google Maps embed -->
             <iframe
               src="https://www.google.com/maps?q=110+Draper+Rd+SW+Blacksburg+VA&output=embed"
               style="border:0;"
@@ -188,38 +193,40 @@
         </div>
       </div>
     </section>
-
-    <!-- CONTACT SECTION -->
-    <section id="contact" class="section section-alt animate">
-      <h2>Contact & Signals</h2>
-      <p class="section-intro">
-        Questions, group visits, or looking for today’s specials? Send a message in a bottle.
-      </p>
-
-      <div class="contact-grid">
-        <div class="slide-up">
-          <h3>Contact</h3>
-          <p><strong>Phone:</strong> <a href="tel:+15405555555">(540) 555-5555</a></p>
-          <p><strong>Email:</strong> <a href="mailto:info@theboardwalkblacksburg.com">info@theboardwalkblacksburg.com</a></p>
-        </div>
-        <div class="slide-up delay-1">
-          <h3>Follow the Flag</h3>
-          <p>
-            <a href="#" target="_blank">Instagram</a> ·
-            <a href="#" target="_blank">Facebook</a> ·
-            <a href="#" target="_blank">TikTok</a>
-          </p>
-        </div>
-      </div>
-    </section>
   </main>
 
-  <footer class="footer animate">
-    <p>© <span id="year"></span> The Boardwalk · Blacksburg, VA</p>
+  <!-- FOOTER WITH CONTACT + APP ICONS -->
+  <footer class="footer animate" id="contact">
+    <div class="footer-inner">
+      <div class="footer-brand">
+        <span class="logo-mark">☠</span>
+        <span class="footer-name">The Boardwalk</span>
+      </div>
+
+      <div class="footer-contact">
+        <p><strong>Phone:</strong> <a href="tel:+15405555555">(540) 555-5555</a></p>
+        <p><strong>Email:</strong> <a href="mailto:info@theboardwalkblacksburg.com">info@theboardwalkblacksburg.com</a></p>
+      </div>
+
+      <div class="footer-social">
+        <a href="#" target="_blank" class="social-icon" aria-label="Instagram">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="#" target="_blank" class="social-icon" aria-label="Facebook">
+          <i class="fa-brands fa-facebook-f"></i>
+        </a>
+        <a href="#" target="_blank" class="social-icon" aria-label="TikTok">
+          <i class="fa-brands fa-tiktok"></i>
+        </a>
+      </div>
+    </div>
+
+    <p class="footer-copy">
+      © <span id="year"></span> The Boardwalk · Blacksburg, VA
+    </p>
   </footer>
 
   <script>
-    // Dynamic year in footer
     document.getElementById("year").textContent = new Date().getFullYear();
   </script>
 </body>
