--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     referrerpolicy="no-referrer"
   />
 
-  <!-- INLINE CSS: no external file needed -->
+  <!-- INLINE CSS (LIGHT THEME) -->
   <style>
     /* ========= RESET & BASE ========= */
     * {
@@ -34,8 +34,8 @@
 
     body {
       font-family: "Poppins", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      background: #020617;
-      color: #f9fafb;
+      background: #fff7ed; /* warm cream */
+      color: #1f2933;
       line-height: 1.6;
     }
 
@@ -66,28 +66,29 @@
     .delay-2 { transition-delay: 0.30s; }
     .delay-3 { transition-delay: 0.45s; }
 
-    /* ========= HERO + NAV (RED TOP) ========= */
+    /* ========= HERO + NAV (LIGHT RED TOP) ========= */
 
     .hero {
       position: relative;
-      min-height: 80vh;
-      padding-bottom: 5rem;
-      background: linear-gradient(to bottom, #b91c1c, #7f1d1d, #3f0c0c);
-      color: #fff;
+      min-height: 75vh;
+      padding-bottom: 4rem;
+      background: linear-gradient(
+        to bottom right,
+        #fee2e2,
+        #fecaca,
+        #fef3c7
+      );
+      color: #1f2933;
       overflow: hidden;
     }
 
+    /* very soft overlay texture */
     .hero::before {
       content: "";
       position: absolute;
       inset: 0;
-      background-image: repeating-linear-gradient(
-        -20deg,
-        rgba(63, 12, 12, 0.9) 0,
-        rgba(63, 12, 12, 0.9) 8px,
-        rgba(185, 28, 28, 0.2) 10px
-      );
-      opacity: 0.25;
+      background-image: radial-gradient(circle at top left, rgba(255,255,255,0.7), transparent 60%);
+      opacity: 0.6;
       pointer-events: none;
     }
 
@@ -99,22 +100,17 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      background: linear-gradient(to bottom, #7f1d1d, #991b1b);
-      border-bottom: 1px solid rgba(255, 255, 255, 0.15);
+      background: rgba(255,255,255,0.95);
+      backdrop-filter: blur(12px);
+      border-bottom: 1px solid rgba(148,163,184,0.3);
     }
 
     .logo {
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
       font-weight: 700;
       font-size: 1.1rem;
       text-transform: uppercase;
-      color: #ffe4e6;
-    }
-
-    .logo-mark {
-      font-size: 1.4rem;
+      color: #b91c1c;
+      letter-spacing: 0.08em;
     }
 
     .nav-links {
@@ -125,7 +121,7 @@
 
     .nav-links a {
       text-decoration: none;
-      color: #ffe4e6;
+      color: #374151;
       font-size: 0.95rem;
       position: relative;
     }
@@ -137,7 +133,7 @@
       left: 0;
       width: 0%;
       height: 2px;
-      background: #facc15;
+      background: #f97316;
       transition: width 0.25s ease;
     }
 
@@ -163,14 +159,14 @@
     .hero h1 {
       font-size: clamp(2.4rem, 4vw, 3.4rem);
       font-weight: 700;
-      color: #ffe4e6;
+      color: #7f1d1d;
       margin-bottom: 1rem;
     }
 
     .hero p {
       max-width: 520px;
       font-size: 1.05rem;
-      color: #fef2f2;
+      color: #4b5563;
     }
 
     .hero-buttons {
@@ -181,15 +177,16 @@
     }
 
     .hero-badge {
-      background: rgba(255, 255, 255, 0.12);
-      border: 1px solid rgba(255, 255, 255, 0.25);
+      display: inline-flex;
+      align-items: center;
       padding: 0.55rem 1rem;
       border-radius: 999px;
       font-size: 0.8rem;
       text-transform: uppercase;
-      color: #fff;
-      letter-spacing: 0.1em;
-      margin-top: 0.5rem;
+      letter-spacing: 0.08em;
+      background: #fee2e2;
+      color: #7f1d1d;
+      border: 1px solid #fecaca;
     }
 
     /* ========= BUTTONS ========= */
@@ -202,47 +199,48 @@
       border: 2px solid transparent;
       cursor: pointer;
       transition: 0.2s ease;
+      font-size: 0.95rem;
     }
 
     .btn.primary {
-      background: linear-gradient(to right, #7f1d1d, #ef4444);
+      background: linear-gradient(to right, #ef4444, #f97316);
       color: #fff7ed;
-      box-shadow: 0 8px 16px rgba(127, 29, 29, 0.4);
+      box-shadow: 0 8px 16px rgba(249,115,22,0.35);
     }
 
     .btn.outline {
-      border: 2px solid #ffe4e6;
-      color: #ffe4e6;
+      border: 2px solid #b91c1c;
+      color: #b91c1c;
       background: transparent;
     }
 
     .btn:hover {
       transform: translateY(-3px);
-      box-shadow: 0 12px 24px rgba(15, 23, 42, 0.4);
+      box-shadow: 0 12px 24px rgba(148,163,184,0.5);
     }
 
     /* ========= SECTIONS ========= */
 
     .section {
       padding: 4rem 7vw;
-      background: #020617;
       scroll-margin-top: 90px;
+      background: #fff7ed;
     }
 
     .section-alt {
-      background: #030712;
+      background: #ffffff;
     }
 
     .section h2 {
       text-align: center;
       font-size: 2rem;
-      color: #fecaca;
+      color: #7f1d1d;
       margin-bottom: 0.75rem;
     }
 
     .section-intro {
       text-align: center;
-      color: #e5e7eb;
+      color: #4b5563;
       max-width: 580px;
       margin: 0 auto 2.5rem;
     }
@@ -256,32 +254,34 @@
     }
 
     .card {
-      background: #111827;
-      border: 1px solid rgba(248, 113, 113, 0.4);
+      background: #ffffff;
+      border: 1px solid #fee2e2;
       padding: 1.4rem;
       border-radius: 1rem;
       transition: 0.25s ease;
-      box-shadow: 0 14px 30px rgba(0, 0, 0, 0.45);
+      box-shadow: 0 14px 30px rgba(148, 163, 184, 0.25);
     }
 
     .card h3 {
       margin-bottom: 0.3rem;
-      color: #fee2e2;
+      color: #7f1d1d;
     }
 
     .card .price {
-      color: #fbbf24;
+      color: #b45309;
       font-weight: 700;
       margin-bottom: 0.5rem;
     }
 
     .card p {
       font-size: 0.92rem;
+      color: #4b5563;
     }
 
     .card:hover {
       transform: translateY(-6px);
-      border-color: #fca5a5;
+      box-shadow: 0 18px 40px rgba(148, 163, 184, 0.4);
+      border-color: #fecaca;
     }
 
     /* ========= 2-COLUMN LAYOUT ========= */
@@ -298,15 +298,15 @@
     }
 
     .about-highlight {
-      background: #111827;
+      background: #fff7ed;
       border: 1px solid #facc15;
       padding: 1.5rem;
       border-radius: 1rem;
-      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.55);
+      box-shadow: 0 12px 30px rgba(148, 163, 184, 0.35);
     }
 
     .about-highlight h3 {
-      color: #facc15;
+      color: #b45309;
       margin-bottom: 0.5rem;
     }
 
@@ -321,13 +321,15 @@
       display: flex;
       justify-content: space-between;
       padding: 0.3rem 0;
-      border-bottom: 1px dotted rgba(255, 255, 255, 0.15);
+      border-bottom: 1px dashed rgba(148,163,184,0.6);
+      font-size: 0.95rem;
+      color: #374151;
     }
 
     .note {
       margin-top: 0.8rem;
       font-size: 0.85rem;
-      color: #9ca3af;
+      color: #6b7280;
     }
 
     #visit .two-column {
@@ -336,11 +338,11 @@
 
     .map-wrapper {
       width: 100%;
-      background: #000;
+      background: #ffffff;
       border-radius: 1rem;
-      border: 1px solid rgba(248, 113, 113, 0.5);
+      border: 1px solid #fecaca;
       overflow: hidden;
-      box-shadow: 0 16px 35px rgba(0, 0, 0, 0.6);
+      box-shadow: 0 18px 40px rgba(148, 163, 184, 0.4);
     }
 
     .map-embed {
@@ -357,19 +359,19 @@
     /* ========= LINKS ========= */
 
     a {
-      color: #fecaca;
+      color: #b91c1c;
     }
 
     a:hover {
-      color: #fde047;
+      color: #f97316;
     }
 
     /* ========= FOOTER WITH CONTACT & ICONS ========= */
 
     .footer {
-      background: #111827;
+      background: #ffffff;
       padding: 2rem 7vw 1.4rem;
-      border-top: 1px solid rgba(255, 255, 255, 0.1);
+      border-top: 1px solid rgba(209,213,219,0.9);
     }
 
     .footer-inner {
@@ -383,14 +385,8 @@
     }
 
     .footer-brand {
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
       font-weight: 600;
-      color: #fecaca;
-    }
-
-    .footer-name {
+      color: #7f1d1d;
       letter-spacing: 0.06em;
       text-transform: uppercase;
       font-size: 0.9rem;
@@ -398,14 +394,15 @@
 
     .footer-contact p {
       font-size: 0.9rem;
+      color: #374151;
     }
 
     .footer-contact a {
-      color: #fecaca;
+      color: #b91c1c;
     }
 
     .footer-contact a:hover {
-      color: #fde047;
+      color: #f97316;
     }
 
     .footer-social {
@@ -420,9 +417,9 @@
       display: inline-flex;
       align-items: center;
       justify-content: center;
-      background: #020617;
-      border: 1px solid rgba(248, 250, 252, 0.25);
-      color: #f9fafb;
+      background: #fff7ed;
+      border: 1px solid #fecaca;
+      color: #7f1d1d;
       font-size: 1.1rem;
       transition: transform 0.15s ease, box-shadow 0.15s ease,
                   border-color 0.15s ease, background 0.15s ease, color 0.15s ease;
@@ -430,16 +427,16 @@
 
     .social-icon:hover {
       transform: translateY(-2px);
-      border-color: #facc15;
-      background: #facc15;
-      color: #111827;
-      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.45);
+      border-color: #f97316;
+      background: #f97316;
+      color: #fff;
+      box-shadow: 0 10px 20px rgba(248, 113, 113, 0.45);
     }
 
     .footer-copy {
       text-align: center;
       font-size: 0.8rem;
-      color: #9ca3af;
+      color: #6b7280;
     }
 
     /* ========= RESPONSIVE ========= */
@@ -471,7 +468,7 @@
   </style>
 
   <script>
-    // Scroll animations + smooth scrolling
+    // Animations + smooth scrolling + footer year
     document.addEventListener("DOMContentLoaded", () => {
       // IntersectionObserver for .animate
       const observer = new IntersectionObserver((entries) => {
@@ -496,6 +493,10 @@
           }
         });
       });
+
+      // Footer year
+      const yearEl = document.getElementById("year");
+      if (yearEl) yearEl.textContent = new Date().getFullYear();
     });
   </script>
 </head>
@@ -504,27 +505,26 @@
   <header class="hero" id="home">
     <nav class="nav">
       <div class="logo">
-        <span class="logo-mark">☠</span>
         The Boardwalk
       </div>
       <ul class="nav-links">
         <li><a href="#menu">Menu</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#visit">Visit</a></li>
-        <!-- Contact now scrolls to the footer -->
+        <!-- Contact scrolls to the footer -->
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
 
     <div class="hero-inner animate">
       <div class="hero-content">
-        <h1 class="slide-up">Funnel Cakes & High Seas Treats</h1>
+        <h1 class="slide-up">Funnel Cakes & Boardwalk Treats</h1>
         <p class="slide-up delay-1">
-          Blacksburg’s own boardwalk — with funnel cakes, fried Oreos, and late-night treasures worthy of a pirate’s loot.
+          Blacksburg’s own boardwalk — with funnel cakes, fried Oreos, and late-night treats that feel like a summer fair.
         </p>
         <div class="hero-buttons slide-up delay-2">
-          <a href="#menu" class="btn primary">View the Loot (Menu)</a>
-          <a href="#visit" class="btn outline">Find Our Harbor</a>
+          <a href="#menu" class="btn primary">View the Menu</a>
+          <a href="#visit" class="btn outline">Visit Us</a>
         </div>
       </div>
       <div class="hero-badge slide-up delay-3">
@@ -543,25 +543,25 @@
 
       <div class="cards">
         <article class="card slide-up">
-          <h3>Captain’s Classic Funnel Cake</h3>
+          <h3>Classic Funnel Cake</h3>
           <p class="price">$7.50</p>
-          <p>Crispy, golden, dusted with powdered “pirate snow.” A true original.</p>
+          <p>Crispy, golden, dusted with powdered sugar. Simple and perfect.</p>
         </article>
 
         <article class="card slide-up delay-1">
-          <h3>Strawberry Shipwreck Sundae</h3>
+          <h3>Strawberry Sundae Funnel</h3>
           <p class="price">$9.50</p>
-          <p>Funnel cake decked with strawberries, ice cream, and whipped cream.</p>
+          <p>Funnel cake topped with strawberries, ice cream, and whipped cream.</p>
         </article>
 
         <article class="card slide-up delay-2">
-          <h3>Fried Oreos of the Deep</h3>
+          <h3>Fried Oreos</h3>
           <p class="price">$6.00</p>
-          <p>Oreos battered and fried till they’re molten treasure inside.</p>
+          <p>Oreos dipped in batter, fried to order, and finished with powdered sugar.</p>
         </article>
 
         <article class="card slide-up">
-          <h3>Churro Cutlasses</h3>
+          <h3>Churro Bites</h3>
           <p class="price">$5.50</p>
           <p>Cinnamon-sugar churro bites, perfect for sharing with your crew.</p>
         </article>
@@ -569,11 +569,11 @@
         <article class="card slide-up delay-1">
           <h3>Boardwalk Fries</h3>
           <p class="price">$4.50</p>
-          <p>Thick-cut, salty fries like you’d find at any seaside pier.</p>
+          <p>Thick-cut fries, crispy outside and fluffy inside.</p>
         </article>
 
         <article class="card slide-up delay-2">
-          <h3>Seasonal Captain’s Special</h3>
+          <h3>Seasonal Special</h3>
           <p class="price">Ask in store</p>
           <p>Limited-time creations inspired by holidays, game days, and local events.</p>
         </article>
@@ -584,14 +584,14 @@
     <section id="about" class="section section-alt animate">
       <div class="section-inner two-column">
         <div class="slide-up">
-          <h2>About Our Crew</h2>
+          <h2>About The Boardwalk</h2>
           <p>
             The Boardwalk brings the feel of a seaside fair straight into downtown Blacksburg.
             From overflowing funnel cakes to deep-fried favorites, we’re here for the bold, the hungry,
             and anyone chasing a little fun.
           </p>
           <p>
-            Locally owned and just a short trek from Virginia Tech, we’re a go-to spot for late-night study breaks,
+            Locally owned and just a short walk from Virginia Tech, we’re a go-to spot for late-night study breaks,
             post-game celebrations, and dessert dates.
           </p>
         </div>
@@ -607,9 +607,9 @@
       </div>
     </section>
 
-    <!-- VISIT SECTION (KEEP HOURS + LOCATION + MAP) -->
+    <!-- VISIT SECTION -->
     <section id="visit" class="section animate">
-      <h2>Hours & Harbor</h2>
+      <h2>Hours & Location</h2>
       <div class="section-inner two-column">
         <div class="slide-up">
           <h3>Find Us</h3>
@@ -652,8 +652,7 @@
   <footer class="footer animate" id="contact">
     <div class="footer-inner">
       <div class="footer-brand">
-        <span class="logo-mark">☠</span>
-        <span class="footer-name">The Boardwalk</span>
+        The Boardwalk
       </div>
 
       <div class="footer-contact">
@@ -678,9 +677,5 @@
       © <span id="year"></span> The Boardwalk · Blacksburg, VA
     </p>
   </footer>
-
-  <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
-  </script>
 </body>
 </html>
