--- a/index.html
+++ b/index.html
@@ -510,9 +510,7 @@
       <ul class="nav-links">
         <li><a href="#menu">Menu</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="#visit">Visit</a></li>
-        <!-- Contact scrolls to the footer -->
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#visit">Visit &amp; Contact</a></li>
       </ul>
     </nav>
 
