--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
       <ul class="nav-links">
         <li><a href="#menu">Menu</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="#visit">Visit Us</a></li>
+        <li><a href="#visit">Contact</a></li>
       </ul>
     </nav>
 
